added icon, openGraph and link to new app

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Palarczyk Enterprises</title>
-  <meta name="title" property="og:title" content="Palarczyk Enterprises" />
+  <meta property="og:image" content="images/share.png">
+  <link rel="icon" href="images/icon.png">
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -93,7 +94,12 @@
       </a>
       <a class="anchor" href="https://app-palarczyk-memory.herokuapp.com/">
         <article class="testimonials__item">
-          <h3 class="testimonials__author">Gra pamięć</h3>
+          <h3 class="testimonials__author">Gra w pamięć</h3>
+        </article>
+      </a>
+      <a class="anchor" href="https://palarczykenterprises.com/books">
+        <article class="testimonials__item">
+          <h3 class="testimonials__author">Lista książek</h3>
         </article>
       </a>
        </div>
@@ -109,7 +115,7 @@
           <a class="anchor" href="https://github.com/sebastianpalarczyk/accounts_workshop">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
-            <h3 class="testimonials__author">My account</h3>
+            <h3 class="testimonials__author">Aplikacja księgowa</h3>
             <p class="testimonials__content">Aplikacja księgowa, która w sposób automatyczny liczy podatki z wprowadzonych do serwisu 
               faktur.
             </p>
@@ -119,7 +125,7 @@
         <a href="https://github.com/sebastianpalarczyk/Hangman-game" class="anchor">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
-            <h3 class="testimonials__author">Hangman</h3>
+            <h3 class="testimonials__author">Gra w wisielca</h3>
             <p class="testimonials__content">Klasyczna graw w wisielca polegająca na odgadywaniu słów z kategorii przysłowia 
               polskie.
             </p>
@@ -130,7 +136,7 @@
         <a class="anchor" href="https://github.com/sebastianpalarczyk/Memory_game">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
-            <h3 class="testimonials__author">Memory game</h3>
+            <h3 class="testimonials__author">Gra w pamięć</h3>
             <p class="testimonials__content">Klasyczna gra w pamięć z wykorzystaniem postaci komputerowej kolekcjonerskiej
               gry karcianej.
             </p>
