added new icon and new foto

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <a class="anchor" href="https://github.com/sebastianpalarczyk/Give_back_in_good_hands">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
-            <h3 class="testimonials__author">Give back in good hands </h3>
+            <h3 class="testimonials__author">Oddaj w dobre ręce</h3>
             <p class="testimonials__content">Aplikacja wykorzystująca wzorzec architektoniczny MVC. Służy do rejestracji niepotrzebnych rzeczy i przekazania ich
               zaufanym instytucją. </p>
           </article>
@@ -160,7 +160,7 @@
         <a class="anchor" href="https://github.com/sebastianpalarczyk/Scrum-Lab">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
-            <h3 class="testimonials__author">Projekt Scrum-Lab</h3>
+            <h3 class="testimonials__author">Zaplanuj jedzonko</h3>
             <p class="testimonials__content">Aplikacja webowa wykorzystująca wzorzec architektoniczny MVC służąca do planowania 
               posiłków w ciągu dnia.
             </p>
