added new footer background color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <link rel="stylesheet" href="css/navigation.css" />
   <link rel="stylesheet" href="css/section.css" />
   <link rel="stylesheet" href="css/testimonials.css" />
-  <link rel="stylesheet" href="css/video.css" />
   <link rel="stylesheet" href="css/anchor.css" />
   <link rel="stylesheet" href="css/div.css" />
 
@@ -82,22 +81,22 @@
       <h2 class="header">Projekty na serwerze</h2>
 
       <div class="container container--small">
-        <a  class="anchor" href="https://app-palarczyk.herokuapp.com/">
+        <a  class="section__anchor" href="https://app-palarczyk.herokuapp.com/">
         <article class="testimonials__item">
             <h3 class="testimonials__author">Aplikacja księgowa</h3>
         </article>
       </a>
-      <a class="anchor" href="https://app-palarczyk-hangman-game.herokuapp.com/">
+     <a  class="section__anchor" href="https://app-palarczyk-hangman-game.herokuapp.com/">
         <article class="testimonials__item">
           <h3 class="testimonials__author">Gra w wisielca</h3>
         </article>
       </a>
-      <a class="anchor" href="https://app-palarczyk-memory.herokuapp.com/">
+     <a  class="section__anchor" href="https://app-palarczyk-memory.herokuapp.com/">
         <article class="testimonials__item">
           <h3 class="testimonials__author">Gra w pamięć</h3>
         </article>
       </a>
-      <a class="anchor" href="https://palarczykenterprises.com/books">
+     <a  class="section__anchor" href="https://palarczykenterprises.com/books">
         <article class="testimonials__item">
           <h3 class="testimonials__author">Lista książek</h3>
         </article>
@@ -112,7 +111,7 @@
 
       <div class="container">
         <div class="testimonials">
-          <a class="anchor" href="https://github.com/sebastianpalarczyk/accounts_workshop">
+         <a  class="section__anchor" href="https://github.com/sebastianpalarczyk/accounts_workshop">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
             <h3 class="testimonials__author">Aplikacja księgowa</h3>
@@ -122,7 +121,7 @@
           </article>
         </a>
 
-        <a href="https://github.com/sebastianpalarczyk/Hangman-game" class="anchor">
+        <a class="section__anchor" href="https://github.com/sebastianpalarczyk/Hangman-game">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
             <h3 class="testimonials__author">Gra w wisielca</h3>
@@ -133,7 +132,7 @@
           </article>
         </a>
 
-        <a class="anchor" href="https://github.com/sebastianpalarczyk/Memory_game">
+       <a  class="section__anchor" href="https://github.com/sebastianpalarczyk/Memory_game">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
             <h3 class="testimonials__author">Gra w pamięć</h3>
@@ -142,14 +141,14 @@
             </p>
           </article>
         </a>
-        <a href="https://github.com/sebastianpalarczyk/Driver" class="anchor">
+        <a class="section__anchor" href="https://github.com/sebastianpalarczyk/Driver">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
             <h3 class="testimonials__author">Driver</h3>
             <p class="testimonials__content">Aplikacja "backendowa" wykorzystująca interfejs REST API dla serwisu samochodowego zajmującego się szkoleniem kierowców. </p>
           </article>
         </a>
-        <a class="anchor" href="https://github.com/sebastianpalarczyk/Give_back_in_good_hands">
+       <a  class="section__anchor" href="https://github.com/sebastianpalarczyk/Give_back_in_good_hands">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
             <h3 class="testimonials__author">Oddaj w dobre ręce</h3>
@@ -157,7 +156,7 @@
               zaufanym instytucją. </p>
           </article>
         </a>
-        <a class="anchor" href="https://github.com/sebastianpalarczyk/Scrum-Lab">
+       <a  class="section__anchor" href="https://github.com/sebastianpalarczyk/Scrum-Lab">
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
             <h3 class="testimonials__author">Zaplanuj jedzonko</h3>
@@ -173,12 +172,7 @@
 
   <footer class="footer" id="linkedin">
     <a class="footer__link" href="https://linkedin.com/in/sebastianpalarczyk/">
-    <div class="div_right">
-      <img class="footer_image" src="images/image-6.png">
-    </div>
-    <div class="div_left">
-      Linked
-    </div>
+      <img class="footer__image" src="images/image-1.png">
     </a>
   </footer>
 
