added app give back in good hands

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
           <h3 class="testimonials__author">Lista książek</h3>
         </article>
       </a>
+      <a  class="section__anchor" href="https://app-palarczyk-charity.herokuapp.com/">
+        <article class="testimonials__item">
+          <h3 class="testimonials__author">Oddam w dobre ręce</h3>
+        </article>
+      </a>
        </div>
       </div>
     </section>
