fixed button navigation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <title>Palarczyk Enterprises</title>
   <meta property="og:image" content="images/share.png">
-  <link rel="icon" href="images/icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/icon.png">
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -20,10 +20,9 @@
   <link rel="stylesheet" href="css/navigation.css" />
   <link rel="stylesheet" href="css/section.css" />
   <link rel="stylesheet" href="css/testimonials.css" />
-  <link rel="stylesheet" href="css/anchor.css" />
-  <link rel="stylesheet" href="css/div.css" />
+  
 
-  <script src="js/mobile-navigation.js"></script>
+  <script defer src="js/mobile-navigation.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMontserrat:400,700&display=swap&subset=latin-ext"
     rel="stylesheet" />
