a spelling mistake was corrected

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <img class="testimonials__image" alt="" src="images/image-4.png">
             <h3 class="testimonials__author">Oddaj w dobre ręce</h3>
             <p class="testimonials__content">Aplikacja wykorzystująca wzorzec architektoniczny MVC. Służy do rejestracji niepotrzebnych rzeczy i przekazania ich
-              zaufanym instytucją. </p>
+              zaufanym instytucjom. </p>
           </article>
         </a>
        <a  class="section__anchor" href="https://github.com/sebastianpalarczyk/Scrum-Lab">
