changed links for memery game and hangman game

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
             <h3 class="testimonials__author">Aplikacja księgowa</h3>
         </article>
       </a>
-     <a  class="section__anchor" href="https://app-palarczyk-hangman-game.herokuapp.com/">
+     <a  class="section__anchor" href="https://palarczykenterprises.com/hangman-game/">
         <article class="testimonials__item">
           <h3 class="testimonials__author">Gra w wisielca</h3>
         </article>
       </a>
-     <a  class="section__anchor" href="https://app-palarczyk-memory.herokuapp.com/">
+     <a  class="section__anchor" href="https://palarczykenterprises.com/memory_game/">
         <article class="testimonials__item">
           <h3 class="testimonials__author">Gra w pamięć</h3>
         </article>
