added new app todo-list-react

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
           <h3 class="testimonials__author">Oddam w dobre ręce</h3>
         </article>
       </a>
+      <a  class="section__anchor" href="https://palarczykenterprises.com/todo_list_react/">
+        <article class="testimonials__item">
+          <h3 class="testimonials__author">Lista zadań</h3>
+        </article>
+      </a>
        </div>
       </div>
     </section>
