added currency converter

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
           <h3 class="testimonials__author">Lista zadań</h3>
         </article>
       </a>
+      <a  class="section__anchor" href="https://palarczykenterprises.com/currency-converter-react/">
+        <article class="testimonials__item">
+          <h3 class="testimonials__author">Kalkulator walut</h3>
+        </article>
+      </a>
        </div>
       </div>
     </section>
