added application of to do list and application of currency converter

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <article class="testimonials__item">
             <img class="testimonials__image" alt="" src="images/image-4.png">
             <h3 class="testimonials__author">Gra w wisielca</h3>
-            <p class="testimonials__content">Klasyczna graw w wisielca polegająca na odgadywaniu słów z kategorii przysłowia 
+            <p class="testimonials__content">Klasyczna gra w wisielca polegająca na odgadywaniu słów z kategorii przysłowia 
               polskie.
             </p>
             
@@ -176,6 +176,24 @@
             <h3 class="testimonials__author">Zaplanuj jedzonko</h3>
             <p class="testimonials__content">Aplikacja webowa wykorzystująca wzorzec architektoniczny MVC służąca do planowania 
               posiłków w ciągu dnia.
+            </p>
+          </article>
+        </a>
+        <a  class="section__anchor" href="https://github.com/sebastianpalarczyk/todo_list_react">
+          <article class="testimonials__item">
+            <img class="testimonials__image" alt="" src="images/image-4.png">
+            <h3 class="testimonials__author">Lista zadań</h3>
+            <p class="testimonials__content">Klasyczna lista zadań, która jest zapisywana automatycznie w przeglądarce po stronie użytkownika w Local Storage. 
+              Aplikacja została napisana w JavaScript z wykorzystanie biblioteki React.js.
+            </p>
+          </article>
+        </a>
+        <a  class="section__anchor" href="https://github.com/sebastianpalarczyk/currency-converter-react">
+          <article class="testimonials__item">
+            <img class="testimonials__image" alt="" src="images/image-4.png">
+            <h3 class="testimonials__author">Kalkulator walut</h3>
+            <p class="testimonials__content">Klasyczny kalkulator walut, który przelicza kwotę podaną w złotówkach na dolara amerykańskiego, euro lub funta brytyjskiego. 
+              Aplikacja została napisana z wykorzystaniem JavaScript oraz biblioteki React.js.
             </p>
           </article>
         </a>
