added links to github for list of books

--- a/index.html
+++ b/index.html
@@ -196,6 +196,23 @@
               Aplikacja została napisana z wykorzystaniem JavaScript oraz biblioteki React.js.
             </p>
           </article>
+          <a  class="section__anchor" href="https://github.com/sebastianpalarczyk/books">
+            <article class="testimonials__item">
+              <img class="testimonials__image" alt="" src="images/image-4.png">
+              <h3 class="testimonials__author">Aplikacja frontendowa do listy książek</h3>
+              <p class="testimonials__content">
+                Aplikacja typu front-end napisana dla serwera rest-api, która została napisana w Javie. Aplikacja dodaje, uaktualnia i usuwa książki z listy.
+                Wykorzystane technologie  w projekcie: HTML, CSS, JavaScript.
+              </p>
+            </article>
+            <a  class="section__anchor" href="https://github.com/sebastianpalarczyk/list_of_books">
+              <article class="testimonials__item">
+                <img class="testimonials__image" alt="" src="images/image-4.png">
+                <h3 class="testimonials__author">Aplikacja backendowa do listy książek</h3>
+                <p class="testimonials__content">REST - API application which is written in Java. Aplikacja dodaje, uaktualnia i usuwa książki z listy. Wykorzystane 
+                  technologie w projekcie: Java, Java EE, Spring Boot, Apache Tomcat, MySQL Connector in Java, Model mapper.
+                </p>
+              </article>
         </a>
         </div>
       </div>
