update section about me

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             </h2>
             <p class="section__paragraph">
               Ukończyłem kurs programowania Java Backend Developer w firmie
-              szkoleniowej Coderslab. Aktualnie szukam swojej pierwszej pracy jako Java
-              Backend Developer. W wolnych chwilach tworzę swoje własne projekty starając się 
-              zdobyć jak największe doświadczenie niekomercyjne.
+              szkoleniowej Coderslab. Dodatkowo ukończyłem internetowy kurs Frontend Developer
+              w firmie Youcode i aktualnie szukam swojej pierwszej pracy IT. W wolnych chwilach
+               tworzę swoje własne projekty zdobywając doświadczenie niekomercyjne.
             </p>
           </div>
         </div>
