--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <img class="testimonials__image" alt="" src="images/image-4.png">
               <h3 class="testimonials__author">Aplikacja frontendowa do listy książek</h3>
               <p class="testimonials__content">
-                Aplikacja typu front-end napisana dla serwera rest-api, która została napisana w Javie. Aplikacja dodaje, uaktualnia i usuwa książki z listy.
+                Aplikacja typu front-end napisana dla serwera REST - API, która została napisana w Javie. Aplikacja dodaje, uaktualnia i usuwa książki z listy.
                 Wykorzystane technologie  w projekcie: HTML, CSS, JavaScript.
               </p>
             </article>
