--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             Linkedin
           </a>
         </div>
+        <button class="js-navigation__mobile-button navigation__mobile-button" type="button">
+          <img class="navigation__mobile-button-image" src="images/navigation.svg" alt="Otwórz lub zamknij menu" />
+        </button>
       </div>
     </div>
   </nav>
@@ -118,8 +121,8 @@
             </td>
           </tr>
           <tr>
-            <td class="section_anchor_double">
-              <a class="section__anchor section_anchor_double" href="https://palarczykenterprises.com/books">
+            <td>
+              <a class="section__anchor" href="https://palarczykenterprises.com/books">
                 <article class="testimonials__item">
                   <img class="testimonials__image" alt="" src="images/image_www.jpg">
                   <h3 class="testimonials__author">Lista książek</h3>
