--- a/index.html
+++ b/index.html
@@ -67,22 +67,24 @@
       <div class="container">
         <table class="container">
           <tr>
-            <td>
-              <a class="section__anchor" href="https://app-palarczyk.herokuapp.com/">
-                <article class="testimonials__item">
-                  <img class="testimonials__image" alt="" src="images/image_www.jpg">
-                  <h3 class="testimonials__author">Aplikacja księgowa</h3>
-                </article>
-              </a>
-            </td>
-            <td>
-              <a class="section__anchor" href="https://github.com/sebastianpalarczyk/accounts_workshop">
-                <article class="testimonials__item">
-                  <img class="testimonials__image" alt="" src="images/image_github.png">
-                  <h3 class="testimonials__author">Aplikacja księgowa</h3>
-                </article>
-              </a>
-            </td>
+            <div class="testimonials">
+              <td>
+                <a class="section__anchor" href="https://app-palarczyk.herokuapp.com/">
+                  <article class="testimonials__item">
+                    <img class="testimonials__image" alt="" src="images/image_www.jpg">
+                    <h3 class="testimonials__author">Aplikacja księgowa</h3>
+                  </article>
+                </a>
+              </td>
+              <td>
+                <a class="section__anchor" href="https://github.com/sebastianpalarczyk/accounts_workshop">
+                  <article class="testimonials__item">
+                    <img class="testimonials__image" alt="" src="images/image_github.png">
+                    <h3 class="testimonials__author">Aplikacja księgowa</h3>
+                  </article>
+                </a>
+              </td>
+            </div>
           </tr>
           <tr>
             <td>
