--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       <h2 class="header">Projekty</h2>
 
       <div class="container">
-        <table class="container">
-          <tr>
-            <div class="testimonials">
+        <table class="testimonials">
+          <tr >
+            <div>
               <td>
                 <a class="section__anchor" href="https://app-palarczyk.herokuapp.com/">
                   <article class="testimonials__item">
