--- a/index.html
+++ b/index.html
@@ -65,26 +65,24 @@
       <h2 class="header">Projekty</h2>
 
       <div class="container">
-        <table class="testimonials">
-          <tr >
-            <div>
-              <td>
-                <a class="section__anchor" href="https://app-palarczyk.herokuapp.com/">
-                  <article class="testimonials__item">
-                    <img class="testimonials__image" alt="" src="images/image_www.jpg">
-                    <h3 class="testimonials__author">Aplikacja księgowa</h3>
-                  </article>
-                </a>
-              </td>
-              <td>
-                <a class="section__anchor" href="https://github.com/sebastianpalarczyk/accounts_workshop">
-                  <article class="testimonials__item">
-                    <img class="testimonials__image" alt="" src="images/image_github.png">
-                    <h3 class="testimonials__author">Aplikacja księgowa</h3>
-                  </article>
-                </a>
-              </td>
-            </div>
+        <table class="container testimonials">
+          <tr>
+            <td>
+              <a class="section__anchor" href="https://app-palarczyk.herokuapp.com/">
+                <article class="testimonials__item">
+                  <img class="testimonials__image" alt="" src="images/image_www.jpg">
+                  <h3 class="testimonials__author">Aplikacja księgowa</h3>
+                </article>
+              </a>
+            </td>
+            <td>
+              <a class="section__anchor" href="https://github.com/sebastianpalarczyk/accounts_workshop">
+                <article class="testimonials__item">
+                  <img class="testimonials__image" alt="" src="images/image_github.png">
+                  <h3 class="testimonials__author">Aplikacja księgowa</h3>
+                </article>
+              </a>
+            </td>
           </tr>
           <tr>
             <td>
